test: keep History sync UI guard Java 8 compatible